# elio

./: .gitignore  LICENSE  README.md  elio.spec  installer.iss  pyproject.toml
.github/workflows/: release.yml
auth/: manager.py  oauth.py
cli/: __init__.py  chat.py  commands.py  commands_router.py  main.py  selector.py
config/: loader.py  schema.py
files/: handler.py
providers/: base.py  claude.py  gemini.py  groq_provider.py  openai.py  registry.py
session/: context.py  history.py  manager.py
tui/: app.py  commands_router.py
utils/: error.py
